--- a/docker/compose.development.yaml
+++ b/docker/compose.development.yaml
@@ -1,7 +1,7 @@
 services:
   mongodb:
     image: mongo:5-focal
-    container_name: mongodb-devopsss
+    container_name: mongodb-devopsss-dev
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
@@ -29,7 +29,7 @@ services:
     build:
       context: ../backend
       dockerfile: Dockerfile.dev
-    container_name: backend-devopsss
+    container_name: backend-devopsss-dev
     volumes:
       - ../backend:/app
       - /app/node_modules
@@ -54,7 +54,7 @@ services:
     build:
       context: ../gateway
       dockerfile: Dockerfile.dev
-    container_name: gateway-devopsss
+    container_name: gateway-devopsss-dev
     restart: always
     volumes:
       - ../gateway:/app
